--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/T1nkov/TaskManager-Server#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
