--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,19 @@
   },
   "homepage": "https://github.com/T1nkov/TaskManager-Server#readme",
   "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.30",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.0",
     "pg": "^8.11.3",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   }
 }
