--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "prettier": "^3.1.1",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
